deps/v8/test/message/export-duplicate-as.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:9: SyntaxError: Duplicate export of 'c'
export { a, b as c, c, b };
                    ^
SyntaxError: Duplicate export of 'c'
